--- a/src/index.css
+++ b/src/index.css
@@ -140,4 +140,17 @@
     print-color-adjust: exact !important;
     -webkit-print-color-adjust: exact !important;
   }
+
+  #CvAts,
+  #CvAts * {
+    visibility: visible !important;
+    -webkit-print-color-adjust: exact !important;
+    print-color-adjust: exact !important;
+  }
+
+  #CvAts {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
 }
