--- a/src/components/forms/Satisfaccion/formSatisfaccion.html
+++ b/src/components/forms/Satisfaccion/formSatisfaccion.html
@@ -14,7 +14,7 @@
                 <div class="progress-bar" id="progressBar"></div>
             </div>
             <div class="page-indicator">
-                <span id="currentPage">1</span> of <span id="totalPages">2</span>
+                <span id="currentPage">1</span> de <span id="totalPages">2</span>
             </div>
         </header>
 
@@ -42,7 +42,7 @@
                 </div>
             </section>
 
-            <!-- Section 2: Feedback -->
+            <!-- Section 2: Additional Feedback -->
             <section id="section2" class="form-section">
                 <h2>Additional Feedback</h2>
                 
